# spenpy

./: .gitignore  LICENSE  README.md  demo.ipynb  inv.ipynb  pyproject.toml  readme.md  repeat.ipynb  setup.py  skill.md  temp.md  test.ipynb  test_pv360.py  tmp.md
demo/: 01_run_pv360_pipeline.py  02_single_spen_reconstruction.py  03_inspect_intermediate_steps.py  04_compare_with_matlab.py  05_visualize_phase_maps.py  06_traditional_reconstruction_step_by_step.ipynb  07_real_scanner_reconstruction_step_by_step.ipynb  README.md
docs/: scanner_parameter_notes.md  simulation_yaml.md
spenpy/: __init__.py  spen.py
spenpy/bruker/: __init__.py  image.py  param.py  raw.py
spenpy/cli/: pv360.py  pv360_full.py
spenpy/configs/: aggressive_training.yaml  legacy_like.yaml  scanner_like.yaml
spenpy/core/: __init__.py  matrix.py  sinc.py
spenpy/fft/: __init__.py  transform.py
spenpy/recon/: __init__.py  gridding.py  phase.py  spen_recon.py
spenpy/sim/: __init__.py  spen_sim.py
spenpy/utils/: __init__.py  coil_combine.py  polyfit.py  smooth.py  tensor.py  zero_fill.py
tests/: test_core.py  test_fft.py  test_phase_diagnostics.py  test_pv360_matlab_parity.py  test_sim_config.py  test_tensor.py  verify_pv360_reconstruction.py
